@@ -431,12 +431,13 @@ module Druid
     end
 
     #
-    # adds two methods - one to retrieve the table element, and another to
+    # adds three methods - one to retrieve the text for the table, one
+    # to retrieve the table element, and another to
     # check the table's existence.
     #
     # @example
     #   table(:cart, :id => 'shopping_cart')
-    #   # will generate a 'cart_element' and 'cart?' method
+    #   # will generate a 'cart', 'cart_element' and 'cart?' method
     #
     # @param the name used for the generated methods
     # @param identifier how we find a table. You can use a multiple parameters
@@ -449,6 +450,10 @@ module Druid
     # @param optional block to be invoked when element method is called
     #
     def table(name, identifier={:index => 0}, &block)
+      define_method(name) do
+        return table_text_for identifier.clone unless block_given?
+        self.send("#{name}_element").text
+      end
       define_method("#{name}_element") do
         return call_block(&block) if block_given?
         table_for(identifier.clone)
